Added Jasmine and Karma to boilerplate

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "angular-boilerplate",
   "version": "0.1",
   "dependencies": {
+    "angular-mocks": "*",
     "angular": "*",
     "ui-router": "*",
     "angular-jwt": "*",
